Return filename found on FS when getting from cache

--- a/composer.json
+++ b/composer.json
@@ -31,6 +31,7 @@
   "require": {
     "ext-dom": "*",
     "ext-curl": "*",
-    "ext-libxml": "*"
+    "ext-libxml": "*",
+    "ext-fileinfo": "*"
   }
 }
